cmake_minimum_required(VERSION 3.3)
project(xv6)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    dist/asm.h
    dist/bio.c
    dist/bootasm.S
    dist/bootmain.c
    dist/buf.h
    dist/cat.c
    dist/console.c
    dist/defs.h
    dist/dot-bochsrc
    dist/echo.c
    dist/elf.h
    dist/entry.S
    dist/entryother.S
    dist/exec.c
    dist/fcntl.h
    dist/file.c
    dist/file.h
    dist/forktest.c
    dist/fs.c
    dist/fs.h
    dist/gdbutil
    dist/grep.c
    dist/ide.c
    dist/init.c
    dist/initcode.S
    dist/ioapic.c
    dist/kalloc.c
    dist/kbd.c
    dist/kbd.h
    dist/kill.c
    dist/lapic.c
    dist/ln.c
    dist/log.c
    dist/ls.c
    dist/main.c
    dist/Makefile
    dist/memlayout.h
    dist/mkdir.c
    dist/mkfs.c
    dist/mmu.h
    dist/mp.c
    dist/mp.h
    dist/param.h
    dist/picirq.c
    dist/pipe.c
    dist/pr.pl
    dist/printf.c
    dist/proc.c
    dist/proc.h
    dist/README
    dist/rm.c
    dist/runoff
    dist/runoff.list
    dist/runoff.spec
    dist/runoff1
    dist/sh.c
    dist/sign.pl
    dist/spinlock.c
    dist/spinlock.h
    dist/stat.h
    dist/stressfs.c
    dist/string.c
    dist/swtch.S
    dist/syscall.c
    dist/syscall.h
    dist/sysfile.c
    dist/sysproc.c
    dist/timer.c
    dist/toc.ftr
    dist/toc.hdr
    dist/trap.c
    dist/trapasm.S
    dist/traps.h
    dist/types.h
    dist/uart.c
    dist/ulib.c
    dist/umalloc.c
    dist/user.h
    dist/usertests.c
    dist/usys.S
    dist/vectors.pl
    dist/vm.c
    dist/wc.c
    dist/x86.h
    dist/zombie.c
    docs/book-rev8.pdf
    docs/xv6-rev8.pdf
    asm.h
    bio.c
    bootasm.S
    bootmain.c
    buf.h
    BUGS
    cat.c
    console.c
    cuth
    date.h
    defs.h
    dot-bochsrc
    echo.c
    elf.h
    entry.S
    entryother.S
    exec.c
    fcntl.h
    file.c
    file.h
    forktest.c
    fs.c
    fs.h
    gdbutil
    grep.c
    ide.c
    init.c
    initcode.S
    ioapic.c
    kalloc.c
    kbd.c
    kbd.h
    kernel.ld
    kill.c
    lapic.c
    LICENSE
    ln.c
    log.c
    ls.c
    main.c
    Makefile
    memide.c
    memlayout.h
    mkdir.c
    mkfs.c
    mmu.h
    mp.c
    mp.h
    Notes
    param.h
    picirq.c
    pipe.c
    pr.pl
    printf.c
    printpcs
    proc.c
    proc.h
    README
    rm.c
    runoff
    runoff.list
    runoff.spec
    runoff1
    sh.c
    show1
    sign.pl
    sleep1.p
    spinlock.c
    spinlock.h
    spinp
    stat.h
    stressfs.c
    string.c
    swtch.S
    symlink.patch
    syscall.c
    syscall.h
    sysfile.c
    sysproc.c
    timer.c
    toc.ftr
    toc.hdr
    trap.c
    trapasm.S
    traps.h
    TRICKS
    types.h
    uart.c
    ulib.c
    umalloc.c
    user.h
    usertests.c
    usys.S
    vectors.pl
    vm.c
    wc.c
    x86.h
    zombie.c)

add_executable(xv6 ${SOURCE_FILES})